--- a/app/src/components/header/styles.css
+++ b/app/src/components/header/styles.css
@@ -36,6 +36,10 @@
   z-index: 1;
 }
 
+.active {
+  text-decoration: underline !important;
+}
+
 @media (min-width: 768px) {
   .nav {
     --state-hamburguer: scale(0);
