--- a/app/src/components/header/styles.css
+++ b/app/src/components/header/styles.css
@@ -18,7 +18,7 @@
   transform: var(--state-close);
 }
 
-.nav__links {
+.nav__links__dark {
   background-color: black;
   position: absolute;
   top: 0;
@@ -36,8 +36,30 @@
   z-index: 1;
 }
 
+.nav__links__light {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+
+  display: grid;
+  align-content: center;
+  gap: 2em;
+  padding-left: 5%;
+  transform: var(--state-menu);
+  transition: 0.3s transform;
+  z-index: 1;
+}
+
 .active {
-  text-decoration: underline !important;
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 @media (min-width: 768px) {
@@ -50,7 +72,8 @@
     --state-close: scale(0);
   }
 
-  .nav__links {
+  .nav__links__dark,
+  .nav__links__light {
     padding: 0;
     background-color: unset;
     position: unset;
@@ -65,5 +88,6 @@
   .nav__link {
     font-size: 1rem;
     letter-spacing: none;
+    position: relative;
   }
 }
