--- a/app/src/components/header/styles.css
+++ b/app/src/components/header/styles.css
@@ -18,8 +18,8 @@
   transform: var(--state-close);
 }
 
-.nav__links__dark {
-  background-color: black;
+.nav__links__dark,
+.nav__links__light {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -36,22 +36,12 @@
   z-index: 1;
 }
 
+.nav__links__dark {
+  background-color: black;
+}
+
 .nav__links__light {
   background-color: white;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 0;
-
-  display: grid;
-  align-content: center;
-  gap: 2em;
-  padding-left: 5%;
-  transform: var(--state-menu);
-  transition: 0.3s transform;
-  z-index: 1;
 }
 
 .active {
